--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,11 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/sequelize": "^4.28.14",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "sequelize": "^6.25.6",
+    "sequelize-cli": "^6.5.2"
   }
 }
