--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
@@ -21,10 +22,13 @@
   },
   "dependencies": {
     "@types/sequelize": "^4.28.14",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.8.0",
     "sequelize": "^6.25.6",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "zod": "^3.19.1"
   }
 }
