--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,13 @@
   "sqltools.connections": [
     {
       "previewLimit": 50,
-      "server": "localhost",
+      "server": "0.0.0.0",
       "port": 5432,
-      "askForPassword": true,
       "driver": "PostgreSQL",
-      "name": "askcn",
-      "database": "bankin",
-      "username": "postgres"
+      "name": "Bank",
+      "database": "postgres",
+      "username": "postgres",
+      "password": "root"
     }
   ]
 }
