refactor: :recycle: Alteração do script de start para rodar apartir da build

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "npm run db:reset && npm run dev",
+    "start": "npm run db:reset && node ./build/index.js",
     "db:reset": "npx tsc && npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "lint": "eslint ."
   },
